added more styling and nav

--- a/app/index.html
+++ b/app/index.html
@@ -24,19 +24,31 @@
 
     <header>
       <h1>SPEED OF LIFE</h1>
-      <ul>
-        <li><a href="#">about</a></li>
-        <li><a href="#">soundcloud</a></li>
-        <li><a href="#">contact</a></li>
-      </ul>
+      <nav class="menu-icon">
+        <a href="#">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </a>
+      </nav>
     </header>
+    <div class="menu-container">
+        <div class="centered">
+          <ul>
+              <li><a href="#">about</a></li>
+              <li><a href="#">soundcloud</a></li>
+              <li><a href="#">contact</a></li>
+          </ul>
+        </div>
+    </div>
 
     <div id="tracks"></div>
 
 
     <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
     <script src="https://connect.soundcloud.com/sdk-2.0.0.js"></script>
+    <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
